# hsrg-project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  index.html
src/: Beat.h  BeatFactory.h  Beatmap.cpp  Beatmap.h  Constants.h  Editor-Gui.h  Editor.cpp  Editor.h  File.cpp  File.h  Flash.h  MapContainer.cpp  MapContainer.h  MapPlayer.cpp  MapPlayer.h  MapStore.h  Note.h  Settings.h  Structs.h  Timable.cpp  Timable.h  gui_man.h  main.cpp  rayugui_impl.cpp  tinyfiledialog.c  tinyfiledialog.h
